singletonの追加 ディレクトリの追加

--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -133,6 +133,10 @@
   <ItemGroup>
     <ClCompile Include="program\Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="program\Graphics\View\View.hpp" />
+    <ClInclude Include="program\System\Singleton.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
