Utilityのフォルダを作成

--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="program\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="program\System\Singleton.hpp" />
+    <ClInclude Include="program\System\Unitity\Singleton.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
