--- a/CLI_RPG_teamA.vcxproj.filters
+++ b/CLI_RPG_teamA.vcxproj.filters
@@ -29,7 +29,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="program\System\Unitity\Singleton.hpp">
+    <ClInclude Include="program\System\Utility\Singleton.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
