--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="program\Application\Inventory\Inventory\InventoryManager.cpp" />
     <ClCompile Include="program\Application\Player\action\ActionSelector.cpp" />
     <ClCompile Include="program\Engine\Engine.cpp" />
     <ClCompile Include="program\FrameWork\GameManager\GameManager.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="program\System\Time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="program\Application\Inventory\Inventory\InventoryManager.hpp" />
     <ClInclude Include="program\Application\Inventory\Item\base\Item.hpp" />
     <ClInclude Include="program\Application\Inventory\Item\Healing_Item\Item_Healing.hpp" />
     <ClInclude Include="program\Application\Player\action\ActionCommand.hpp" />
