--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -135,8 +135,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="program\Application\Charactor\Player\Player.cpp" />
     <ClCompile Include="program\Application\Inventory\Inventory\InventoryManager.cpp" />
-    <ClCompile Include="program\Application\Player\action\ActionSelector.cpp" />
+    <ClCompile Include="program\Application\BattleSystem\action\ActionSelector.cpp" />
     <ClCompile Include="program\Application\Scene\TestScene.cpp" />
     <ClCompile Include="program\Engine\Engine.cpp" />
     <ClCompile Include="program\FrameWork\GameManager\GameManager.cpp" />
@@ -147,13 +148,15 @@
     <ClCompile Include="program\System\Time\Time.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="program\Application\Charactor\Player\Controller\PlayerController.hpp" />
+    <ClInclude Include="program\Application\Charactor\Player\Player.hpp" />
     <ClInclude Include="program\Application\BattleSystem\Calc\BattleCalc.hpp" />
     <ClInclude Include="program\Application\Charactor\base\CharactorBase.hpp" />
     <ClInclude Include="program\Application\Charactor\status\CharaStatus.hpp" />
     <ClInclude Include="program\Application\Inventory\Inventory\InventoryManager.hpp" />
     <ClInclude Include="program\Application\Inventory\Item\base\Item.hpp" />
     <ClInclude Include="program\Application\Inventory\Item\Healing_Item\Item_Healing.hpp" />
-    <ClInclude Include="program\Application\Player\action\ActionCommand.hpp" />
+    <ClInclude Include="program\Application\BattleSystem\action\ActionCommand.hpp" />
     <ClInclude Include="program\Application\Scene\TestScene.hpp" />
     <ClInclude Include="program\Engine\Engine.hpp" />
     <ClInclude Include="program\FrameWork\GameManager\GameManager.hpp" />
@@ -162,9 +165,13 @@
     <ClInclude Include="program\Scene\SceneBase.h" />
     <ClInclude Include="program\Scene\SceneManager.h" />
     <ClInclude Include="program\System\Input\Key.hpp" />
+    <ClInclude Include="program\System\Math\Point\Point.hpp" />
     <ClInclude Include="program\System\Utility\Define.hpp" />
     <ClInclude Include="program\System\Utility\Singleton.hpp" />
     <ClInclude Include="program\System\Time\Time.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
