Scene系がコンパイルに含まれてなかったので修正

--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -146,7 +146,9 @@
     <ClCompile Include="program\Graphics\View\View.cpp" />
     <ClCompile Include="program\Main.cpp" />
     <ClCompile Include="program\Scene\DefalutScene\DefalutScene.cpp" />
+    <ClCompile Include="program\Scene\InGameScene\InGame.cpp" />
     <ClCompile Include="program\Scene\SceneManager.cpp" />
+    <ClCompile Include="program\Scene\TitleScene\Title.cpp" />
     <ClCompile Include="program\System\CSV\MapLoder.cpp" />
     <ClCompile Include="program\System\Math\Point\Point.cpp" />
     <ClCompile Include="program\System\Time\Time.cpp" />
@@ -168,8 +170,10 @@
     <ClInclude Include="program\FrameWork\GameManager\GameManager.hpp" />
     <ClInclude Include="program\Graphics\View\View.hpp" />
     <ClInclude Include="program\Scene\DefalutScene\DefalutScene.h" />
+    <ClInclude Include="program\Scene\InGameScene\InGame.h" />
     <ClInclude Include="program\Scene\SceneBase.h" />
     <ClInclude Include="program\Scene\SceneManager.h" />
+    <ClInclude Include="program\Scene\TitleScene\Title.h" />
     <ClInclude Include="program\System\CSV\CSVLoader.h" />
     <ClInclude Include="program\System\CSV\MapLoder.h" />
     <ClInclude Include="program\System\Input\Key.hpp" />
