--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -151,7 +151,8 @@
     <ClCompile Include="program\Graphics\View\View.cpp" />
     <ClCompile Include="program\Main.cpp" />
     <ClCompile Include="program\Scene\DefalutScene\DefalutScene.cpp" />
-    <ClCompile Include="program\Scene\GameClear\GameClear.cpp" />
+    <ClCompile Include="program\Scene\GameClearScene\GameClear.cpp" />
+    <ClCompile Include="program\Scene\GameOverScene\GameOver.cpp" />
     <ClCompile Include="program\Scene\InGameScene\InGame.cpp" />
     <ClCompile Include="program\Scene\SceneManager.cpp" />
     <ClCompile Include="program\Scene\TitleScene\Title.cpp" />
@@ -182,7 +183,8 @@
     <ClInclude Include="program\FrameWork\GameManager\GameManager.hpp" />
     <ClInclude Include="program\Graphics\View\View.hpp" />
     <ClInclude Include="program\Scene\DefalutScene\DefalutScene.h" />
-    <ClInclude Include="program\Scene\GameClear\GameClear.hpp" />
+    <ClInclude Include="program\Scene\GameClearScene\GameClear.h" />
+    <ClInclude Include="program\Scene\GameOverScene\GameOver.h" />
     <ClInclude Include="program\Scene\InGameScene\InGame.h" />
     <ClInclude Include="program\Scene\SceneBase.h" />
     <ClInclude Include="program\Scene\SceneManager.h" />
