バトルの攻撃選択の実装

--- a/CLI_RPG_teamA.vcxproj
+++ b/CLI_RPG_teamA.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="program\Application\BattleSystem\action\Executor\CommandExecutor.cpp" />
     <ClCompile Include="program\Application\BattleSystem\System\BattleSystem.cpp" />
+    <ClCompile Include="program\Application\BattleSystem\Target\TargetAttack.cpp" />
     <ClCompile Include="program\Application\Charactor\base\CharactorBase.cpp" />
     <ClCompile Include="program\Application\Charactor\Factory\Factory.cpp" />
     <ClCompile Include="program\Application\Charactor\Player\Controller\PlayerController.cpp" />
@@ -162,7 +163,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="program\Application\BattleSystem\action\Executor\CommandExecutor.hpp" />
+    <ClInclude Include="program\Application\BattleSystem\Encount\EncountSystem.h" />
     <ClInclude Include="program\Application\BattleSystem\System\BattleSystem.hpp" />
+    <ClInclude Include="program\Application\BattleSystem\Target\TargetAttack.h" />
     <ClInclude Include="program\Application\Charactor\Factory\Factory.h" />
     <ClInclude Include="program\Application\Charactor\Player\Controller\PlayerController.hpp" />
     <ClInclude Include="program\Application\Charactor\Player\Player.hpp" />
